# JustWrite

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  VERSION  vcpkg-configuration.json  vcpkg.json
.github/workflows/: Release.yml
assets/: JustWrite.rc  res.qrc
assets/lang/: en_US.qm  en_US.ts  meta.ts  zh_CN.qm  zh_CN.ts
assets/res/template/epub/: style.css
doc/: blueprint.md  mainline.md
misc/license/: MiniZip.LICENSE  deps.toml
scripts/: cmake-build.nu  jwrite.nu  view_profiler.py
src/: App.cpp  BookDirManager.h  CMakeLists.txt  CatalogTree.cpp  CatalogTree.h  CatelogBrowser.cpp  CatelogBrowser.h  FlatButton.cpp  FlatButton.h  FrontEditor.cpp  FrontEditor.h  GlobalCommand.cpp  GlobalCommand.h  JustWrite.cpp  JustWrite.h  JustWriteSidebar.cpp  JustWriteSidebar.h  KeyShortcut.cpp  KeyShortcut.h  LimitedViewEditor.cpp  LimitedViewEditor.h  MessyInput.cpp  MessyInput.h  ParaBlockEdit.cpp  ParaBlockEdit.h  ProfileUtils.cpp  ProfileUtils.h  StatusBar.cpp  StatusBar.h  TextBlockLayout.cpp  TextBlockLayout.h  TextInputCommand.cpp  TextInputCommand.h  TextInputFilter.h  TextViewEngine.cpp  TextViewEngine.h  TitleBar.cpp  TitleBar.h  VIsualTextEditContext.cpp  VisualTextEditContext.h
src/cppjieba/: CMakeLists.txt  DictTrie.hpp  FullSegment.hpp  Jieba.hpp  LICENSE  NOTICE  PreFilter.hpp  QuerySegment.hpp  SegmentBase.hpp  SegmentTagged.hpp  TextRankExtractor.hpp  Trie.hpp  Unicode.hpp
src/epub/: EpubBuilder.cpp
src/jwrite/: App.cpp  AppAction.cpp  AppAction.h  AppConfig.cpp  AppConfig.h  BookInfo.h  BookManager.cpp  BookManager.h  CMakeLists.txt  ColorScheme.cpp  ColorScheme.h  ColorTheme.cpp  ColorTheme.h  CoreTextViewEngine.cpp  CoreTextViewEngine.h  EnhancedStyleFreeDocument.cpp  EnhancedStyleFreeDocument.h  GlobalCommand.cpp  GlobalCommand.h  InputMethodHook.cpp  InputMethodHook.h  MessyInput.cpp  ProfileUtils.cpp  ProfileUtils.h  RwLock.cpp  RwLock.h  TextEditHistory.cpp  TextEditHistory.h  TextInputCommand.cpp  TextInputCommand.h  TextRestrictRule.cpp  TextRestrictRule.h  TextViewEngine.cpp  TextViewEngine.h  Tokenizer.cpp  Tokenizer.h  TwoLevelDataModel.cpp  TwoLevelDataModel.h  Version.cpp.in  Version.h  (+4 more)
src/jwrite/epub/: EpubBuilder.cpp  EpubBuilder.h
src/jwrite/jeditor/: Block.h
src/jwrite/minizip/: README.contrib
src/jwrite/sample/: MultiStyleBlockEditorDemo.cpp  MultiStyleBlockEditorDemo.h
src/jwrite/ui/: AboutDialog.cpp  AboutDialog.h  BookInfoEdit.cpp  BookInfoEdit.h  ColorSchemeDialog.cpp  ColorSchemeDialog.h  ColorSelectorButton.cpp  ColorSelectorButton.h  ColorThemeDialog.cpp  ColorThemeDialog.h  EditPage.cpp  EditPage.h  Editor.cpp  Editor.h  FlatButton.cpp  FlatButton.h  FloatingDialog.cpp  FloatingDialog.h  FloatingLabel.cpp  FloatingLabel.h  FloatingMenu.cpp  FloatingMenu.h  FontSelectDialog.cpp  FontSelectDialog.h  Gallery.cpp  Gallery.h  Jeditor.cpp  Jeditor.h  JustWrite.cpp  JustWrite.h  Label.cpp  Label.h  MessageBox.cpp  MessageBox.h  PlainImageView.cpp  PlainImageView.h  PrimaryEditor.cpp  PrimaryEditor.h  QuickTextInput.cpp  QuickTextInput.h  (+22 more)
src/limonp/: CMakeLists.txt  LICENSE  Logging.hpp  NOTICE  StdExtension.hpp  StringUtil.hpp
src/minizip/: CMakeLists.txt  crypt.h  ioapi.h  skipset.h  zip.h
src/qt-material/: CMakeLists.txt  qtmaterialcircularprogress_internal.cpp  qtmaterialdialog_internal.cpp  qtmaterialdialog_internal.h  qtmaterialflatbutton.cpp  qtmaterialflatbutton.h  qtmaterialflatbutton_internal.cpp  qtmaterialflatbutton_internal.h  qtmaterialscrollbar.cpp  qtmaterialslider.cpp  qtmaterialslider_internal.cpp  qtmaterialslider_internal.h  qtmaterialtextfield_internal.cpp  qtmaterialtoggle_internal.h
src/qt-material/lib/: qtmaterialripple.cpp  qtmaterialripple.h  qtmaterialstatetransition.cpp  qtmaterialtheme.cpp
src/ui/: EditPage.cpp  Editor.cpp  Editor.h  FlatButton.cpp  FlatButton.h  Gallery.cpp  Gallery.h  JustWrite.cpp  JustWrite.h  StatusBar.cpp  TitleBar.cpp  TwoLevelTree.cpp  TwoLevelTree.h
src/widget-kit/: CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  ColorPreviewItem.cpp  ColorPreviewItem.h  ElidedLabel.cpp  ElidedLabel.h  FlatButton.cpp  FlatButton.h  ImageLabel.cpp  ImageLabel.h  LayoutHelper.cpp  LayoutHelper.h  MessageBox.cpp  MessageBox.h  OverlayDialog.cpp  OverlayDialog.h  OverlaySurface.cpp  OverlaySurface.h  Progress.cpp  Progress.h  TextInputDialog.cpp  TextInputDialog.h  ToolTip.h  Tooltip.cpp  TwoLevelDataModel.cpp  TwoLevelDataModel.h  TwoLevelTree.cpp  TwoLevelTree.h
test/: CMakeLists.txt  Entry.cpp  Helper.cpp  Helper.h  TextEdit.cpp
